New site is ready

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Brett Daley's Homepage
-description: Computer scientist and engineer with interests in AI, machine learning, electronics, and entrepreneurship.
+description: "Brett Daley: Computer scientist and engineer researching AI and reinforcement learning."
 url: https://brett-daley.github.io
-logo: /assets/images/portrait-1662x1162.jpg
 lang: en_US
 
 plugins:
