Add summary from old site

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Brett Daley"
   avatar           : "brett-daley-portrait-1000px.jpg"
-  bio              : "Computing science PhD student at the University of Alberta"
+  bio              : "PhD student at the University of Alberta"
   location         :
   employer         :
   pubmed           :
